增加消息记录查询等功能
